feat: added edit screen
